# FinAI

./: .env.example  .gitignore  README.md  pyproject.toml
agents/: README.md  README_qualitative_risk_agent.md  README_sentiment_agent.md  fundamental_agent.py  leader_agent.py  llm_client.py  qualitative_risk_agent.py  quantitative_risk_agent.py  redteam_agent.py  redteam_loop.py  risk_agent_script.py  risk_protocol.py  run_full_agent.py  run_fundamental_agent.py  run_leader_agent.py  run_qualitative_risk_agent.py  run_quantitative_risk_agent.py  run_sentiment_agent.py  run_single_agent.py  sentiment_agent.py  single_agent.py  test_fundamental_agent.py  test_leader_agent.py  test_llm_client.py  test_qualitative_risk_agent.py  test_quantitative_risk_agent.py  test_redteam_agent.py  test_redteam_loop.py  test_risk_protocol.py  test_sentiment_agent.py  test_single_agent.py  test_transcript.py  transcript.py
config/: README.md  settings.py  test_settings.py
contracts/: README.md  schemas.py  state.py  test_contracts.py
data/EDGAR_retrieval/: README.md  edgar_retrieval.py  run_fetch.py  test_edgar_retrieval.py
data/FinnHub_retrieval/: README.md  finnhub_retrieval.py  test_finnhub_retrieval.py
data/financial_retrieval/: README.md  financial_retrieval.py  run_fetch_financials.py  test_financial_retrieval.py
data/price_retrieval/: README.md  price_retrieval.py  run_fetch_prices.py  test_price_retrieval.py
data/rag_10k/: README.md  rag_10k.py  run_build_indexes.py  test_rag_10k.py
data/reddit_retrieval/: README.md  reddit_retrieval.py  test_reddit_retrieval.py
data/t0_logic/: README.md  t0_logic.py  tests_t0_logic.py
docs/: AI in Science and Business Final Report.docx  RUNNING.md  result.md  risk_analysis_slide.html
evaluation/: README.md  metrics.py  significance.py  test_metrics.py  test_significance.py
experiments/: README.md  _kit.py  analyze_completeness.py  completeness.py  conftest.py  context.py  experiment_config.py  pipeline.py  registry.py  results.py  run_experiment.py  runner.py  test_completeness.py  test_context.py  test_experiment_config.py  test_pipeline.py  test_registry.py  test_results.py  test_runner.py
experiments/configs/: ablation.yaml  ablation_dow30.yaml  ablation_dow30_gpt5_4_mini.yaml  full.yaml  single.yaml
orchestration/: README_graph.md  graph.py  test_graph.py
